StageSelect: CSS - Fixed alert spacing

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -420,12 +420,6 @@ a.aria-skip-link:visited,
 
 /* Content */
 
-/* Content - Alerts */
-.alert {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-
 /* Content - Badges */
 .badge {
   margin-bottom: .25em;
